--- a/WpfApp1/Theme/DataGridStyle.xaml
+++ b/WpfApp1/Theme/DataGridStyle.xaml
@@ -28,18 +28,24 @@
             </Setter.Value>
         </Setter>
         <Style.Triggers>
-            <Trigger Property="IsSelected"
+
+            <Trigger Property="IsMouseOver"
                      Value="True">
                 <Setter Property="Background"
                         Value="{StaticResource ButtonHighlightColor}" />
             </Trigger>
+            <Trigger Property="IsSelected"
+                     Value="True">
+                <Setter Property="Background"
+                        Value="{StaticResource MainBrightColor}" />
+            </Trigger>
         </Style.Triggers>
     </Style>
 
-    
-    
+
+
     <!--Row Style-->
-    
+
     <Style x:Key="DataGridDefaultRowStyle"
            TargetType="{x:Type DataGridRow}">
         <Setter Property="SnapsToDevicePixels"
@@ -89,6 +95,12 @@
             </Setter.Value>
         </Setter>
         <Style.Triggers>
+            <Trigger Property="IsSelected"
+                     Value="True">
+                <Setter Property="Background"
+                        Value="{StaticResource MainBrightColor}" />
+            </Trigger>
+
             <Trigger Property="IsNewItem"
                      Value="True">
                 <Setter Property="Margin"
